@@ -1,6 +1,7 @@
 2013-02-28  Jesper Öqvist <jesper.oqvist@cs.lth.se>
 
     * Non-parenthesized variable names can not contain a dollar sign
+    * Trim leading empty line from if-statement body
 
 2013-02-26  Jesper Öqvist <jesper.oqvist@cs.lth.se>
 
